stylesheets/xwing.css
@font-face {
  font-family: kimberley;
  src: url("../fonts/kimberley bl.ttf"); }

@font-face {
  font-family: EurostileStandard;
  src: url("../fonts/EurostileLTStd.otf"); }

@font-face {
  font-family: EurostileStandardBold;
  src: url("../fonts/EurostileLTStd-Bold.otf"); }

@font-face {
  font-family: EurostileStandardOblique;
  src: url("../fonts/EurostileLTStd-Oblique.otf"); }

@font-face {
  font-family: EurostileStandardBoldOblique;
  src: url("../fonts/EurostileLTStd-BoldOblique.otf"); }

@font-face {
  font-family: BankGothicMediumBT;
  src: url("../fonts/Bank Gothic Medium BT.ttf"); }

@font-face {
  font-family: BankGothicHD;
  src: url("../fonts/bankgthd.ttf"); }

body, button {
  font-family: EurostileStandard; }

strong {
  font-family: EurostileStandardBold;
  font-weight: normal; }

em {
  font-family: EurostileStandardOblique;
  font-style: normal; }

strong em, em strong {
  font-family: EurostileStandardBoldOblique;
  font-style: normal;
  font-weight: normal; }

.show-on-print {
  display: none; }

.nav-tabs > .active > a {
  color: white !important; }

.ship-container > .row-fluid {
  padding: 10px 0px; }

.ship {
  border: medium solid black; }

.card-stat, .info-data.info-skill, .info-data.info-attack, .info-data.info-agility, .info-data.info-hull, .info-data.info-shields {
  font-family: kimberley;
  font-size: 1.5em; }

.info-data.info-skill {
  color: #cd6d2d; }

.info-data.info-attack {
  color: #ef232b; }

.info-data.info-agility {
  color: #6bbe44; }

.info-data.info-hull {
  color: #f0ec1e; }

.info-data.info-shields {
  color: #7ed3e5;
  padding: 2px; }

.info-name {
  font-family: BankGothicHD;
  font-size: 1.5em; }

.info-well {
  color: black;
  margin-top: 10px; }

.info-well table > tbody > tr > td:first-child {
  font-weight: bold;
  vertical-align: top; }

.points-display-container {
  font-size: 1.2em;
  background-color: rgba(0, 0, 0, 0.5);
  padding-top: 5px;
  text-align: center; }

.points-display-container span {
  padding: 5px 0px; }

.modal {
  color: black; }

.icon, img.icon-straight, img.icon-bankleft, img.icon-bankright, img.icon-turnleft, img.icon-turnright, img.icon-uturn, img.icon-focus, img.icon-evade, img.icon-barrel-roll, img.icon-target-lock, img.icon-hit, img.icon-crit, img.icon-turret, img.icon-elite, img.icon-missile, img.icon-torpedo, img.icon-astromech, img.icon-attack, img.icon-agility, img.icon-hull, img.icon-shields {
  background-image: url("../images/xwing-icons.png");
  background-position-y: -4px;
  background-repeat: no-repeat; }

img.icon-straight {
  width: 9px;
  height: 19px;
  background-position-x: 0px;
  margin-top: -2px; }

img.icon-bankleft {
  width: 12px;
  height: 19px;
  background-position-x: -11px;
  margin-top: -1px; }

img.icon-bankright {
  width: 10px;
  height: 18px;
  background-position-x: -25px;
  margin-top: -1px; }

img.icon-turnleft {
  width: 16px;
  height: 19px;
  background-position-x: -38px;
  margin-top: -3px; }

img.icon-turnright {
  width: 17px;
  height: 19px;
  background-position-x: -55px;
  margin-top: -3px; }

img.icon-uturn {
  width: 17px;
  height: 19px;
  background-position-x: -73px; }

img.icon-focus {
  width: 27px;
  height: 13px;
  background-position-x: -93px;
  background-position-y: -10px; }

img.icon-evade {
  width: 16px;
  height: 22px;
  background-position-x: -121px;
  margin-top: -4px; }

img.icon-barrel-roll {
  width: 37px;
  height: 22px;
  background-position-x: -138px;
  margin-top: -2px; }

img.icon-target-lock {
  width: 28px;
  height: 23px;
  background-position-x: -174px;
  background-position-y: -3px; }

img.icon-hit {
  width: 21px;
  height: 22px;
  background-position-x: -203px;
  margin-top: -2px; }

img.icon-crit {
  width: 28px;
  height: 29px;
  background-position-x: -225px;
  background-position-y: -1px;
  margin-top: -5px; }

img.icon-turret {
  width: 33px;
  height: 33px;
  background-position-x: -2px;
  background-position-y: -31px; }

img.icon-elite {
  width: 33px;
  height: 33px;
  background-position-x: -44px;
  background-position-y: -31px;
  margin-top: -10px; }

img.icon-missile {
  width: 33px;
  height: 33px;
  background-position-x: -83px;
  background-position-y: -31px;
  margin-top: -10px; }

img.icon-torpedo {
  width: 33px;
  height: 33px;
  background-position-x: -123px;
  background-position-y: -31px;
  margin-top: -10px; }

img.icon-astromech {
  width: 33px;
  height: 33px;
  background-position-x: -163px;
  background-position-y: -31px;
  margin-top: -10px; }

img.icon-attack {
  width: 32px;
  height: 30px;
  background-position-x: -200px;
  background-position-y: -32px; }

img.icon-agility {
  width: 32px;
  height: 30px;
  background-position-x: -254px;
  background-position-y: 0px; }

img.icon-hull {
  width: 32px;
  height: 30px;
  background-position-x: -234px;
  background-position-y: -32px; }

img.icon-shields {
  width: 32px;
  height: 30px;
  background-position-x: -266px;
  background-position-y: -32px; }

div.tab-content {
  overflow: visible; }

